# kicad2gcode

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  assets.py  default_rack_template.yaml  inventory.py  pcb2gcode.py  pyproject.toml  rack.py  settings.py  settings_overrides.py  setup.py
.github/workflows/: ci.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
k2g/: __init__.py  board_processor.py  cli.py  config.py  constants.py  units.py
k2g/profiles/: masso_g3.py
k2g/schema/: global_settings_schema.yaml  machining_data_schema.yaml  stock_schema.yaml
kicad2gcode/: __init__.py  board_processor.py  config.py  context.py  coordinate.py  cutting_tools.py  machining.py  operations.py  pcb2gcode.py  pcb_inventory.py  rack.py  utils.py
kicad2gcode/pcbnew/: libkicad_3dsg.so.2.0.0  pcbnew.py
kicad2gcode/profiles/: masso_g3.py
kicad2gcode/schema/: global_settings_schema.yaml  rack_schema.yaml
pcb2gcode/: __init__.py  board_processor.py  bunch.py  config.py  constants.py  context.py  coordinate.py  cutting_tools.py  machining.py  operations.py  pcb2gcode.py  pcb_inventory.py  rack.py  stock_room.py  uniontool.py  units.py  utils.py
pcb2gcode/profiles/: masso_g3.py
pcb2gcode/schema/: global_settings_schema.yaml  machining_data_schema.yaml  rack_schema.yaml
src/: input_schema.json  output_file.yaml  test.py
src/pcb2gcode/: __init__.py  bunch.py  config.py  constants.py  cutting_tools.py  settings.py  stock_room.py  uniontool.py  units.py  utils.py
src/pcb2gcode/conf/: machining_data.yaml  settings.yaml  stock.yaml
src/pcb2gcode/schema/: global_settings_schema.yaml  machining_data_schema.yaml  rack.json  rack_schema.yaml  readme.md  settings.yaml  stock.yaml  stock_schema.yaml
src/pcbgcode/: constants.py  stock_room.py
src/pcbgcode/schema/: stock_schema.yaml
tests/: pulsegen.kicad_pcb  test_board_processor.py  test_config.py  test_coordinate.py  test_cutting_tools.py  test_machining.py  test_pcb2gcode.py  test_pcbgcode.py  test_rack.py  test_tproc.py  test_units.py
