[tool.poetry]
name = "pcb2gcode"
version = "0.1"
description = "A tool to convert KiCad PCB file to a CNC GCode"
authors = ["Guillaume ARRECKX <software@arreckx.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "src/pcb2gcode"}]

[tool.poetry.dependencies]
python = "^3.10"
ruamel-yaml = "^0.17.32"
jsonschema = "^4.19.0"
unyt = "^2.9.5"
python-tsp = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
