[tool.poetry]
name = "pcb2gcode"
version = "0.1"
description = "A tool to convert KiCad PCB file to a CNC GCode"
authors = ["Guillaume ARRECKX <software@arreckx.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "pcb2gcode"}]

[tool.poetry.dependencies]
python = "^3.9"
ruamel-yaml = "^0.17.32"
jsonschema = "^4.19.0"
unyt = "^2.9.5"
python-tsp = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.doc.dependencies]
sphinx = "^7.2.4"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
